# Lite3_MotionSDK

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  docker-compose.yml  launch.sh
include/: custom_gait.h  keyboard_controller.h  sim_receiver.h  sim_robot_types.h  sim_sender.h  sim_timer.h
src/: main.cpp
